--- a/2.2.-Mind-Map.md
+++ b/2.2.-Mind-Map.md
@@ -1,1 +1,120 @@
 ## MindMap
+
+![](Imágenes/MindMap.jpg)
+
+## 1. Autores
+
+**Civiles / Militares**
+
+* Diferenciar entre autores civiles y autores procedentes del ámbito militar.
+* Permite aplicar criterios de clasificación y distribución en la revista.
+
+**Documentos**
+
+* Cada autor puede adjuntar documentos de soporte: CV, anexos, fotografías, etc.
+* Garantiza que toda la documentación quede asociada de forma digital.
+
+**Datos**
+
+* Información personal básica: nombre, contacto y perfil militar si corresponde.
+* Facilita búsquedas y filtrados en el sistema.
+
+**Ejemplar de cortesía**
+
+* Definir si el autor recibirá un ejemplar gratuito de la revista al ser publicado.
+
+---
+
+## 2. Artículos
+
+**Temática**
+
+* Clasificación de los artículos según materia o área de conocimiento.
+* Sirve para organizar la revista por secciones temáticas.
+
+**Tipo**
+
+* Determinar la categoría del artículo: articulo, documento, etc.
+
+**Extensión**
+
+* Definir el tamaño del artículo (número de páginas o caracteres).
+* Garantizar coherencia en la maquetación de la revista.
+
+**Documentos**
+
+* Archivos asociados al artículo: versión enviada, revisiones, imágenes, gráficos.
+
+**Estado**
+
+* Ciclo de vida del artículo: recibido, en revisión, aprobado, rechazado, publicado.
+
+---
+
+## 3. Número de Revista
+
+**Propuesta de artículos**
+
+* Relación de artículos aceptados y en reserva.
+* Base para configurar el contenido de cada edición.
+
+**Secciones**
+
+* Divisiones internas de la revista (secciones fijas).
+
+**Extensión**
+
+* Definición del tamaño total del número: número de páginas y de caracteres.
+
+**Planificación**
+
+* Organización temporal de cuándo se publicará cada número.
+
+---
+
+## 4. Evaluaciones
+
+**Consejero**
+
+* Militar asignado para la evaluación anónima de artículos.
+* Personal militar con una especialidad concreta.
+
+**Especialidad**
+
+* Campo de experiencia del consejero, usado para asignar artículos a evaluar.
+
+**Nº de evaluaciones**
+
+* Control del número de revisiones asignadas a cada consejero.
+* Nº Minimo de evaluacione spor artículo.
+
+**Informe**
+
+* Documento generado tras la evaluación con nota y recomendaciones.
+
+---
+
+## 5. Suscripciones
+
+**Suscriptor**
+
+* Identificación del tipo: civil, militar, particular, empresa o institucional.
+* Permite segmentar las suscripciones.
+
+**Datos de facturación**
+
+* Información del pagador (nombre, contacto, CIF/NIF, método de pago).
+
+**Estado**
+
+* Situación de la suscripción: activa, caducada, pendiente de pago.
+
+**Etiquetas**
+
+* Datos impresos para distribución postal.
+* Gestión de envíos físicos.
+
+**Destinatario**
+
+* Dirección de envío postal: particular o unidad de destino.
+
