Update 3.1. Impact Map

--- a/3.1.-Impact-Map.md
+++ b/3.1.-Impact-Map.md
@@ -4,7 +4,7 @@
 
 ## 1. Objetivo Principal
 
-El objetivo mantener la **continuidad de negocio** asegurando gestón editorial de artículos, evaluaciones, publicaciones y envíos a suscriptores.
+El objetivo mantener la **continuidad de negocio** asegurando gestión editorial de artículos, evaluaciones, publicaciones y envíos a suscriptores.
 
 ## 2. Actores y sus Impactos
 
