Requisitos Funcionales y NoFuncionales.

--- a/2.1.-Requisitos.md
+++ b/2.1.-Requisitos.md
@@ -2,4 +2,29 @@
 
 A continuación se plantean los requisitios para la aplicación divididos en requisitos funcionales y no funcionales.
 
+### Requisitos Funcionales (RF).
+---
 
+- **RF.001**: Alta y edición de **Autor** con documentos asociados (CV/DNI). 
+- **RF.002**: Alta de **Artículo** con **uno o múltiples autores** y con subida de cuerpo del artículo preservando **content-type** y **filename**, registrando el estado del artículo. 
+- **RF.003**: Alta de **Consejero** y **asignación** a **Artículo**. 
+- **RF.004**: Registro de **evaluaciones** (nota 1–6, recomendación) por **Artículo** y subida de **informe**. 
+- **RF.005**: **Clasificación** del artículo (tipo/temática/sección). 
+- **RF.006**: **Propuesta de Número de Revista** con control de **Artículos**. 
+- **RF.007**: **Cierre** del Número de Revista  y bloqueo de edición. 
+- **RF.008**: **Consulta avanzada** con filtros y descargas. 
+- **RF.009**: Alta de **Suscripción** con **Suscriptor**. 
+- **RF.010**: Gestión de **Pagador** de la **Suscripción**. 
+- **RF.011**: Gestión de **Suscripción** (estado, forma de pago, pagador). 
+- **RF.012**: Generar **Etiquetas** de envío por Número **PUBLICADO**. 
+- **RF.013**: **Exportación** de etiquetas **PDF/XLS**. 
+
+
+### Requisitos No Funcionales (RNF)
+---
+
+- **RNF.001**: Control de permisos por rol y frontera de módulo (Administrador/Editor/Distribuidor/Dirección/Consulta).
+- **RNF.002**: **GDPR/LDP**: base legal, **minimización**, derechos ARSLOP, política de **retención** .
+- **RNF.003**: Subida de ficheros hasta **60 MB** por petición.
+- **RNF.004**: Almacenamiento inicial **≥ 65 GB** con crecimiento anual configurable.
+- **RNF.005**: Compatibilidad con los principales neavegadores Chrome/Edge/Firefox.
