--- a/2.3.-Estudio-de-Alternativas.md
+++ b/2.3.-Estudio-de-Alternativas.md
@@ -105,3 +105,22 @@ Aplicación a medida desarrollada internamente para soportar **gestión editoria
 * R1 → Posible / Impacto Alto
 * R2 → Posible / Impacto Alto
 * R3 → Posible / Impacto Moderado
+
+## Comparativa de Alternativas
+
+| Criterio                  | **MagHub (Comercial)**                                                            | **OJS (Open Source)**                                                                         | **Desarrollo Propio**                                                                      |
+| ------------------------- | --------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------ |
+| **Tipo de licencia**      | Propietaria (SaaS)                                                                | Open Source (GPL v2)                                                                          | Propietaria interna                                                                        |
+| **Coste inicial**         | Bajo (despliegue + formación)                                                          | Bajo (instalación/hosting)                                                                    | Bajo (desarrollo 2 meses, equipo interno)                                                |
+| **Coste recurrente**      | Alto (500–1000 €/mes)                                                             | Bajo (hosting 50–150 €/mes)                                                                   | Nulo (despliegue en la Red Corporativa existente)
+| **Tiempo despliegue**     | 1–2 meses                                                                         | 1–3 meses                                                                                     | 2 meses (MVP)                                                                            |
+| **Usabilidad**            | Alta, interfaz moderna                                                            | Media, interfaz básica                                                                        | Alta, interfaz totalmente personalizable                                                   |
+| **Funcionalidades clave** | Suscripciones, CRM, facturación, publicidad, reporting                            | Gestión editorial, publicación online, revisiones                                        | Gestión completa editorial + distribución física + informes                               |
+| **Contras**               | Coste recurrente alto, dependencia proveedor, orientado a medios comerciales      | Limitado para distribución física, personalización costosa, soporte comunitario               | Dependencia de hosting propio + necesidad de soporte continuo para ampliación de funcionalidades            |
+| **Riesgos principales**   | R1: Subida de tarifas<br>R2: Dependencia SaaS<br>R3: Desajuste de funcionalidades | R1: Dependencia de comunidad<br>R2: Costes ocultos en personalización<br>R3: Soporte limitado | R1: Disponibilidad de la Red Corporativa<br>R2: Dependencia del equipo<br>R3: Riesgo de deuda técnica |
+| **Perfil recomendado**    | Organizaciones con presupuesto alto y orientación comercial                       | Instituciones académicas y científicas con publicación digital                                | Organizaciones que necesitan control total de distribución física y personalización    |
+
+
+* **MagHub** es adecuado si se prioriza rapidez y soporte comercial, pero a un coste alto.
+* **OJS** está indicado para publicaciones digitales académicas, barato pero limitado en distribución física.
+* **Desarrollo Propio** es la mejor opción para **integrar distribución física y control absoluto** a menor coste, aprovechando los recursos de la organización.
