Trazabilidad ImpactMap HU.

--- a/2.3.-Historias-de-Usuario.md
+++ b/2.3.-Historias-de-Usuario.md
@@ -21,3 +21,13 @@
 | HU.16 Como **Distribuidor**, quiero generar etiquetas de envío de revistas, para gestionar los lotes. |
 | HU.17 Como **Distribuidor**, quiero exportar etiquetas en PDF/XLS, para impresión o manipulación. |
 | HU.18 Como **Distribuidor/Consulta**, quiero consultar suscriptores, suscripciones y direcciones, para verificar datos. |
+
+| **Impacto**                                                                            | **Entregables**                                                                                                           | **Historias de Usuario (HU)**                                                                                                              |
+| -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------ |
+| **1. Reducir los pasos para registrar artículos, autores y su documentación asociada** | - Registrar y modificar autores y sus artículos enviados a la revista<br>- Asociación de documentos a autores y artículos | - HU.01 Registrar autores con documentos y datos bancarios<br>- HU.02 Alta de artículos con autores y documentos                           |
+| **2. Agilizar el ciclo de evaluación de artículos**                                    | - Mantener el listado de consejeros y sus evaluaciones<br>- Registrar evaluaciones sobre artículos                        | - HU.05 Alta de consejeros<br>- HU.06 Asignar consejeros a artículos<br>- HU.07 Registrar evaluaciones con nota, recomendación e informe   |
+| **3. Consolidar la configuración de los números de revista**                           | - Validar la propuesta de un número de revista<br>- Consolidar artículos en revistas                                      | - HU.08 Crear números de revista<br>- HU.09 Asignar o quitar artículos a un número<br>- HU.10 Publicar número de revista                   |
+| **4. Centralizar la gestión de suscripciones y suscriptores**                          | - Gestionar ciclo de vida de suscripciones                                                                                | - HU.13 Alta de suscriptores y suscripciones<br>- HU.14 Registrar o editar pagador<br>- HU.15 Modificar estados de suscripciones           |
+| **5. Reducción de etapas para la distribución física**                                 | - Generación unificada de etiquetas<br>- Control de ejemplares físicos                                                    | - HU.12 Generar etiquetas de envío a autores<br>- HU.16 Generar etiquetas de envío a suscriptores<br>- HU.17 Exportar etiquetas en PDF/XLS |
+| **6. Facilitar la monitorización del proceso editorial**                               | - Controlar progreso mediante estados de artículos y revistas                                                             | - HU.03 Cambiar estados de artículo<br>- HU.10 Cambiar estados de revista                                                                  |
+| **7. Recibir información detallada sobre la revista**                                  | - Obtener información según criterios de búsqueda                                                                         | - HU.11 Consulta avanzada de artículos, autores y documentos<br>- HU.18 Consultar suscriptores, suscripciones y direcciones                |
