Matriz de cumplimiento.

--- a/2.5.-Matriz-de-cumplimiento.md
+++ b/2.5.-Matriz-de-cumplimiento.md
@@ -1,17 +1,30 @@
-# Cobertura de RF/RNF
+# Cobertura de Historias de Usuario
 
-| Requisito                                       | OJS                                                                             | MagHub/Ad Orbit                                                                                           |
-| ----------------------------------------------- | ------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
-| RF.001 Autor + docs (CV/DNI)                    | ✓ (perfil + adjuntos; puede requerir campos extra)       | \~ (datos de contacto/archivos sí; modelo de “autor” adaptado a su CRM)                |
-| RF.002 Artículo + ficheros + autores            | ✓ (múltiples autores y ficheros; preserva tipos)          | \~ (gestiona contenidos/producción; no es un repositorio académico en sí mismo)              |
-| RF.003–RF.004 Consejeros/evaluaciones + informe | ✓ (revisión, formularios, adjuntos)                      | \~ (se modela como workflow/tareas con adjuntos)                                       |
-| RF.005 Clasificación (tipo/temática/sección)    | ✓ (secciones, palabras clave, etc.)                      | ✓ (metadatos de contenido; configurable)                                               |
-| RF.006–RF.007 Números (propuesta/publicación)   | ✓ (issues y publicación)                                 | ✓ (flatplanning/plan de páginas)                                                       |
-| RF.008 Consultas/descargas                      | ✓ (búsqueda y descarga por rol)                          | ✓ (listados/exportaciones)                                                                  |
-| RF.009–RF.011 Suscripción/Pagador/Estados       | \~ (suscripciones orientadas a **acceso**, no logística) | ✓ (**circulación**/suscripciones operativas)                                            |
-| RF.012–RF.014 Etiquetas y exportes (PDF/XLS)    | \~ (necesita plugin/microservicio)                        | ✓/\~ (vía exportes/plantillas; etiquetas habituales en suites de fulfillment) |
-| RNF.001 Roles/Permisos                          | ✓ (granular por rol)                                     | ✓ (roles de operación comercial/editorial)                                            |
-| RNF.002 GDPR/retención                          | ✓ (depende de despliegue)                                                       | ✓ (SaaS/contrato + DPA)                                                                                   |
-| RNF.003–006 Ficheros/Almacén/Navegadores        | ✓ (configurable)                                                                | ✓ (SaaS enterprise)                                                                                       |
+| Historia de Usuario                                      | OJS (Open Source)                                      | MagHub (Comercial)                            | Desarrollo Propio                                  |
+| -------------------------------------------------------- | ------------------------------------------------------ | --------------------------------------------- | -------------------------------------------------- |
+| **HU.01 Autor + docs bancarios (CV/DNI)**                | ✓ (perfil + adjuntos; faltan bancarios)                | \~ (CRM con adjuntos; no modela bancarios)    | ✓ (datos civiles/militares + docs bancarios)       |
+| **HU.02 Artículo + autores + documentos**                | ✓ (múltiples autores/ficheros; metadatos)              | \~ (gestión contenidos; no académico puro)    | ✓ (ficheros con preservación de tipo y orden)      |
+| **HU.03 Estados de artículo (ciclo completo)**           | ✓ (workflow configurable: recibido→revisado→publicado) | \~ (workflow tareas/editorial; no científico) | ✓ (ciclo de estados trazable, configurable)        |
+| **HU.04 Clasificación artículo (tipo/temática/sección)** | ✓ (secciones, palabras clave, categorías)              | ✓ (metadatos de contenido configurables)      | ✓ (tipos, secciones y temáticas definidas)         |
+| **HU.05 Alta de consejeros (militares)**                 | ✓ (usuarios revisores; no modela perfil militar)       | \~ (roles editoriales genéricos)              | ✓ (perfil militar obligatorio, modelado explícito) |
+| **HU.06 Asignación consejeros a artículos**              | ✓ (gestión de revisores)                               | \~ (workflows de asignación de tareas)        | ✓ (asignación explícita con roles militares)       |
+| **HU.07 Registrar evaluaciones + informe**               | ✓ (formulario revisión + adjuntos)                     | \~ (se modela como feedback/tarea)            | ✓ (evaluación con nota, recomendación + adjunto)   |
+| **HU.08 Crear números de revista**                       | ✓ (issues y publicación online)                        | ✓ (flatplanning + números ediciones)          | ✓ (número de revista con control de páginas)       |
+| **HU.09 Asignar artículos a número de revista**          | ✓ (asociación artículo ↔ issue)                        | ✓ (planificación de páginas)                  | ✓ (asignación con validación de páginas)           |
+| **HU.10 Publicar número de revista**                     | ✓ (cambio estado a publicado)                          | ✓ (workflow publicación)                      | ✓ (bloqueo edición tras publicación)               |
+| **HU.11 Consultas avanzadas artículos/autores**          | ✓ (filtros avanzados, DOIs, keywords)                  | ✓ (listados/exportaciones CRM)                | ✓ (búsqueda multi-criterio en frontend)            |
+| **HU.12 Etiquetas de envío a autores**                   | \~ (plugins externos; orientado a digital)             | ✓ (módulos de circulación con etiquetas)      | ✓ (PDF/XLS integrado para envíos físicos)          |
+| **HU.13 Alta suscriptores + suscripciones**              | \~ (usuarios para acceso digital, no físico)           | ✓ (gestión completa de suscriptores)          | ✓ (suscriptor civil/militar con direcciones)       |
+| **HU.14 Pagador distinto de suscriptor**                 | \~ (requiere personalización)                          | ✓ (modela distintos contactos/pagadores)      | ✓ (entidad pagador separada de suscriptor)         |
+| **HU.15 Estados de suscripción**                         | \~ (enfocado a acceso online, sin logística)           | ✓ (activa, suspendida, cancelada)             | ✓ (activa, suspendida, vencida)                    |
+| **HU.16 Generar etiquetas suscriptores**                 | \~ (no nativo; requiere plugin)                        | ✓ (exportación estándar de etiquetas)         | ✓ (PDF/XLS integrado con direcciones múltiples)    |
+| **HU.17 Exportar etiquetas PDF/XLS**                     | \~ (plugin o módulo extra)                             | ✓ (plantillas listas)                         | ✓ (generación configurable en backend)             |
+| **HU.18 Consulta de suscriptores/suscripciones**         | \~ (consultas básicas de usuarios online)              | ✓ (consultas y listados de circulación)       | ✓ (consultas detalladas con filtros y auditoría)   |
 
-**Leyenda**: ✓ cubre / \~ parcial (configuración o desarrollo ligero).
+Leyenda
+
+✓ → Cobertura nativa
+
+~ → Cobertura parcial (requiere configuración o personalización extra)
+
+Vacío → No cubierto
