Especificación de Actores.

--- a/2.5.-Matriz-de-cumplimiento.md
+++ b/2.5.-Matriz-de-cumplimiento.md
@@ -10,7 +10,7 @@
 | **HU.06 Asignación consejeros a artículos**              | ✓ (gestión de revisores)                               | \~ (workflows de asignación de tareas)        | ✓ (asignación explícita con roles militares)       |
 | **HU.07 Registrar evaluaciones + informe**               | ✓ (formulario revisión + adjuntos)                     | \~ (se modela como feedback/tarea)            | ✓ (evaluación con nota, recomendación + adjunto)   |
 | **HU.08 Crear números de revista**                       | ✓ (issues y publicación online)                        | ✓ (flatplanning + números ediciones)          | ✓ (número de revista con control de páginas)       |
-| **HU.09 Asignar artículos a número de revista**          | ✓ (asociación artículo ↔ issue)                        | ✓ (planificación de páginas)                  | ✓ (asignación con validación de páginas)           |
+| **HU.09 Asignar artículos a número de revista**          | ✓ (asociación artículo - issue)                        | ✓ (planificación de páginas)                  | ✓ (asignación con validación de páginas)           |
 | **HU.10 Publicar número de revista**                     | ✓ (cambio estado a publicado)                          | ✓ (workflow publicación)                      | ✓ (bloqueo edición tras publicación)               |
 | **HU.11 Consultas avanzadas artículos/autores**          | ✓ (filtros avanzados, DOIs, keywords)                  | ✓ (listados/exportaciones CRM)                | ✓ (búsqueda multi-criterio en frontend)            |
 | **HU.12 Etiquetas de envío a autores**                   | \~ (plugins externos; orientado a digital)             | ✓ (módulos de circulación con etiquetas)      | ✓ (PDF/XLS integrado para envíos físicos)          |
