--- a/4.-MVP.md
+++ b/4.-MVP.md
@@ -1,7 +1,25 @@
 ## Producto Mínimo Viable (MVP).
 
-Para definir e implementar un producto mínimo viable que cubra los aspectos esenciales y aporte el valor necesario para alcanzar los objetivos de negocio, y validar la viabilidad de la solución propuesta. 
-Se han identificado los impactos para cumplir con el objetico, descritos en el siguiente listado:
+Un producto mínimo viable que cubra los aspectos esenciales y aporte el valor necesario para alcanzar los objetivos de negocio, y validar la viabilidad de la solución propuesta. 
 
-|
+| **Número** | **Impacto**                                            | **Entregable**                                                | **Historia de Usuario (HU)**                                   | **Prioridad** |
+| ---------- | ------------------------------------------------------ | ------------------------------------------------------------- | -------------------------------------------------------------- | ------------- |
+| HU.01      | Reducir los pasos para registrar artículos y autores   | Registro de autores con datos bancarios y documentos (CV/DNI) | **HU.01 – Registrar autores con documentos y datos bancarios** | 1             |
+| HU.02      | Reducir los pasos para registrar artículos y autores   | Registro de artículos con múltiples autores y ficheros        | **HU.02 – Alta de artículos con autores y documentos**         | 2             |
+| HU.03      | Facilitar la monitorización del proceso editorial      | Cambiar estados de artículo                                   | **HU.03 – Cambiar estado de un artículo**                      | 3             |
+| HU.05      | Agilizar el ciclo de evaluación de artículos           | Alta de consejeros militares                                  | **HU.05 – Registrar consejeros militares**                     | 4             |
+| HU.07      | Agilizar el ciclo de evaluación de artículos           | Registro de evaluaciones con nota, recomendación e informe    | **HU.07 – Registrar evaluaciones**                             | 5             |
+| HU.08      | Consolidar la configuración de los números de revista  | Alta de número de revista                                     | **HU.08 – Crear números de revista**                           | 6             |
+| HU.09      | Consolidar la configuración de los números de revista  | Asignación de artículos a número                              | **HU.09 – Asignar o quitar artículos a revista**               | 7             |
+| HU.10      | Facilitar la monitorización del proceso editorial      | Cierre de número publicado                                    | **HU.10 – Publicar número de revista**                         | 8             |
+| HU.13      | Centralizar la gestión de suscripciones y suscriptores | Alta de suscriptor con suscripción activa                     | **HU.13 – Alta de suscriptores y suscripciones**               | 9             |
+| HU.15      | Centralizar la gestión de suscripciones y suscriptores | Modificación de estados de suscripción                        | **HU.15 – Modificar estados de suscripciones**                 | 10            |
+| HU.16      | Reducción de etapas para la distribución física        | Generación de etiquetas de envío                              | **HU.16 – Generar etiquetas de envío a suscriptores**          | 11            |
+| HU.17      | Reducción de etapas para la distribución física        | Exportación de etiquetas PDF/XLS                              | **HU.17 – Exportar etiquetas en PDF/XLS**                      | 12            |
+
+
+Con este MVP aseguramos:
+
+- **Ciclo editorial mínimo (HU.01–HU.10)**: desde la creación de autores y artículos hasta la publicación de un número.
+- **Ciclo de distribución básico (HU.13–HU.17):** suscripciones, estados, generación y exportación de etiquetas.
 
