--- a/4.-MVP.md
+++ b/4.-MVP.md
@@ -2,24 +2,34 @@
 
 Un producto mínimo viable que cubra los aspectos esenciales y aporte el valor necesario para alcanzar los objetivos de negocio, y validar la viabilidad de la solución propuesta. 
 
-| **Número** | **Impacto**                                            | **Entregable**                                                | **Historia de Usuario (HU)**                                   | **Prioridad** |
-| ---------- | ------------------------------------------------------ | ------------------------------------------------------------- | -------------------------------------------------------------- | ------------- |
-| HU.01      | Reducir los pasos para registrar artículos y autores   | Registro de autores con datos bancarios y documentos (CV/DNI) | **HU.01 – Registrar autores con documentos y datos bancarios** | 1             |
-| HU.02      | Reducir los pasos para registrar artículos y autores   | Registro de artículos con múltiples autores y ficheros        | **HU.02 – Alta de artículos con autores y documentos**         | 2             |
-| HU.03      | Facilitar la monitorización del proceso editorial      | Cambiar estados de artículo                                   | **HU.03 – Cambiar estado de un artículo**                      | 3             |
-| HU.05      | Agilizar el ciclo de evaluación de artículos           | Alta de consejeros militares                                  | **HU.05 – Registrar consejeros militares**                     | 4             |
-| HU.07      | Agilizar el ciclo de evaluación de artículos           | Registro de evaluaciones con nota, recomendación e informe    | **HU.07 – Registrar evaluaciones**                             | 5             |
-| HU.08      | Consolidar la configuración de los números de revista  | Alta de número de revista                                     | **HU.08 – Crear números de revista**                           | 6             |
-| HU.09      | Consolidar la configuración de los números de revista  | Asignación de artículos a número                              | **HU.09 – Asignar o quitar artículos a revista**               | 7             |
-| HU.10      | Facilitar la monitorización del proceso editorial      | Cierre de número publicado                                    | **HU.10 – Publicar número de revista**                         | 8             |
-| HU.13      | Centralizar la gestión de suscripciones y suscriptores | Alta de suscriptor con suscripción activa                     | **HU.13 – Alta de suscriptores y suscripciones**               | 9             |
-| HU.15      | Centralizar la gestión de suscripciones y suscriptores | Modificación de estados de suscripción                        | **HU.15 – Modificar estados de suscripciones**                 | 10            |
-| HU.16      | Reducción de etapas para la distribución física        | Generación de etiquetas de envío                              | **HU.16 – Generar etiquetas de envío a suscriptores**          | 11            |
-| HU.17      | Reducción de etapas para la distribución física        | Exportación de etiquetas PDF/XLS                              | **HU.17 – Exportar etiquetas en PDF/XLS**                      | 12            |
+| **Número** | **Impacto**                                       | **Entregable**                                                | **Historia de Usuario (HU)**                                   | **Prioridad** |
+| ---------- | ------------------------------------------------- | ------------------------------------------------------------- | -------------------------------------------------------------- | ------------- |
+| HU.01      | Reducir pasos para registrar artículos y autores  | Registro de autores con datos bancarios y documentos (CV/DNI) | **HU.01 – Registrar autores con documentos y datos bancarios** | 1             |
+| HU.02      | Reducir pasos para registrar artículos y autores  | Registro de artículos con múltiples autores y ficheros        | **HU.02 – Alta de artículos con autores y documentos**         | 2             |
+| HU.03      | Facilitar la monitorización del proceso editorial | Cambiar estados de artículo                                   | **HU.03 – Cambiar estado de un artículo**                      | 3             |
+| HU.04      | Mejorar organización editorial                    | Clasificación de artículos por tipo/temática/sección          | **HU.04 – Clasificar artículos por tipo, temática y sección**  | 4             |
+| HU.05      | Agilizar el ciclo de evaluación                   | Alta de consejeros militares                                  | **HU.05 – Registrar consejeros militares**                     | 5             |
+| HU.06      | Agilizar el ciclo de evaluación                   | Asignar consejeros a artículos                                | **HU.06 – Asignar consejeros a artículos**                     | 6             |
+| HU.07      | Agilizar el ciclo de evaluación                   | Registro de evaluaciones con nota, recomendación e informe    | **HU.07 – Registrar evaluaciones**                             | 7             |
+| HU.08      | Consolidar números de revista                     | Alta de número de revista                                     | **HU.08 – Crear números de revista**                           | 8             |
+| HU.09      | Consolidar números de revista                     | Asignación de artículos a número                              | **HU.09 – Asignar o quitar artículos a revista**               | 9             |
+| HU.10      | Facilitar la monitorización del proceso editorial | Cierre de número publicado                                    | **HU.10 – Publicar número de revista**                         | 10            |
+| HU.12      | Reducción de etapas para distribución física      | Generación de etiquetas de envío a autores                    | **HU.12 – Generar etiquetas de envío a autores**               | 11            |
+| HU.13      | Centralizar la gestión de suscripciones           | Alta de suscriptores y suscripciones                          | **HU.13 – Alta de suscriptores y suscripciones**               | 12            |
+| HU.14      | Centralizar la gestión de suscripciones           | Gestión de pagador distinto del suscriptor                    | **HU.14 – Registrar/editar pagador**                           | 13            |
+| HU.15      | Centralizar la gestión de suscripciones           | Modificación de estados de suscripción                        | **HU.15 – Modificar estados de suscripciones**                 | 14            |
+| HU.16      | Reducción de etapas para distribución física      | Generación de etiquetas de envío a suscriptores               | **HU.16 – Generar etiquetas de envío a suscriptores**          | 15            |
+| HU.17      | Reducción de etapas para distribución física      | Exportación de etiquetas PDF/XLS                              | **HU.17 – Exportar etiquetas en PDF/XLS**                      | 16            |
 
 
-Con este MVP aseguramos:
+**Historias fuera del MVP**
 
-- **Ciclo editorial mínimo (HU.01–HU.10)**: desde la creación de autores y artículos hasta la publicación de un número.
-- **Ciclo de distribución básico (HU.13–HU.17):** suscripciones, estados, generación y exportación de etiquetas.
+- HU.11 – Consultas avanzadas de artículos/autores/documentos → Evolutivo.
+- HU.18 – Consultar suscriptores/suscripciones/direcciones → Evolutivo.
+
+El **MVP** abarca todo el flujo editorial y de distribución básica:
+
+- **Gestión de artículos/autores/consejeros/evaluaciones** (HU.01–HU.10).
+- **Distribución a suscriptores con suscripciones y etiquetas** (HU.13–HU.17).
+
 
