Actualización de ImpactMap y MindMap.

--- a/2.1.-Mind-Map.md
+++ b/2.1.-Mind-Map.md
@@ -36,6 +36,10 @@
 
 * Determinar la categoría del artículo: articulo, documento, etc.
 
+**Certificado de Pago**
+
+* Certificado de pago de los artículos publicados en la revista, en función de la calidad del mismo.
+
 **Extensión**
 
 * Definir el tamaño del artículo (número de páginas o caracteres).
