--- a/2.2.-Impact-Map.md
+++ b/2.2.-Impact-Map.md
@@ -53,6 +53,11 @@ El objetivo mantener la **continuidad de negocio** asegurando gestión editorial
    * Obtener información mediante busquedas optimizadas (por autor, número de revista, suscriptor, evaluador, etc).
    * Disponer de datos para decisiones estratégicas, como nuevas ediciones o ajustes en la distribución.
 
+8. **Poder generar la documentación de certificados de pago sobre artículos publicados publicados**
+
+   * Generar certificados sobre la remuneración correspondiente a un artículo y sus autores.
+   * Aplicar las retenciones correspondientes, y determinar el liquido a percibir por cada autor.
+
 ---
 
 ## 3. Funcionalidades Clave
