Actualización de Historias de Usuario.

--- a/2.3.-Historias-de-Usuario.md
+++ b/2.3.-Historias-de-Usuario.md
@@ -1,7 +1,6 @@
 # Historias de Usuario (HU)
 
-
-| **Historia de Usuario (HU)** | 
+| **Historia de Usuario (HU)** |
 |-------------------------------|
 | HU.01 Como **Editor**, quiero registrar autores con documentos y datos bancarios, para poder gestionar sus artículos. |
 | HU.02 Como **Editor**, quiero dar de alta artículos con autores y documentos, para iniciar el proceso de revisión. |
@@ -21,6 +20,8 @@
 | HU.16 Como **Distribuidor**, quiero generar etiquetas de envío de revistas, para gestionar los lotes. |
 | HU.17 Como **Distribuidor**, quiero exportar etiquetas en PDF/XLS, para impresión o manipulación. |
 | HU.18 Como **Distribuidor/Consulta**, quiero consultar suscriptores, suscripciones y direcciones, para verificar datos. |
+| HU.19 Como **Editor/Dirección**, quiero generar certificados de pago para autores de artículos publicados, indicando cantidad y retención, para asegurar la correcta remuneración. |
+
 
 | **Impacto**                                                                            | **Entregables**                                                                                                           | **Historias de Usuario (HU)**                                                                                                              |
 | -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------ |
@@ -31,3 +32,4 @@
 | **5. Reducción de etapas para la distribución física**                                 | - Generación unificada de etiquetas<br>- Control de ejemplares físicos                                                    | - HU.12 Generar etiquetas de envío a autores<br>- HU.16 Generar etiquetas de envío a suscriptores<br>- HU.17 Exportar etiquetas en PDF/XLS |
 | **6. Facilitar la monitorización del proceso editorial**                               | - Controlar progreso mediante estados de artículos y revistas                                                             | - HU.03 Cambiar estados de artículo<br>- HU.10 Cambiar estados de revista                                                                  |
 | **7. Recibir información detallada sobre la revista**                                  | - Obtener información según criterios de búsqueda                                                                         | - HU.11 Consulta avanzada de artículos, autores y documentos<br>- HU.18 Consultar suscriptores, suscripciones y direcciones                |
+| **8. Asegurar la correcta remuneración de autores publicados**                         | - Generación de certificados de pago<br>- Registro de cantidades y retenciones aplicadas                                  | - HU.19 Generar certificados de pago para autores                                                                                          |
