--- a/4.2.-Historias-de-Usuarios.md
+++ b/4.2.-Historias-de-Usuarios.md
@@ -260,3 +260,18 @@
 * Acceso **solo lectura** para Consulta; **auditado**.
 
 ---
+
+## HU.19 – Generar Certificado de Pago a Autor
+
+**Como**: Editor / Dirección  
+**Quiero**: generar un certificado de pago para los autores con artículos publicados  
+**Para**: remunerarles con la cantidad correspondiente e incluir la retención aplicable
+
+**DoD**
+
+- Se selecciona un **artículo publicado** y sus autores asociados.  
+- Se registra la **cantidad a pagar** por autor (puede ser variable según calidad).  
+- Se aplica y muestra la **retención correspondiente** (IRPF u otra definida).  
+- Se genera un **certificado en PDF/XLS** con los datos del autor, artículo, importe y retención.  
+
+---
