--- a/2.1.-Mind-Map.md
+++ b/2.1.-Mind-Map.md
@@ -1,124 +1,91 @@
 ## MindMap
 
-![](Imágenes/MindMap.jpg)
+![](Imágenes/MindMapV2.jpg)
 
-## 1. Autores
 
-**Civiles / Militares**
 
-* Diferenciar entre autores civiles y autores procedentes del ámbito militar.
-* Permite aplicar criterios de clasificación y distribución en la revista.
+# Desarrollo de Conceptos del Mind Map
 
-**Documentos**
+Cada concepto tiene una definición sencilla, entendible tanto para negocio como para el equipo técnico
 
-* Cada autor puede adjuntar documentos de soporte: CV, anexos, fotografías, etc.
-* Garantiza que toda la documentación quede asociada de forma digital.
+## Autores
 
-**Datos**
-
-* Información personal básica: nombre, contacto y perfil militar si corresponde.
-* Facilita búsquedas y filtrados en el sistema.
-
-**Ejemplar de cortesía**
-
-* Definir si el autor recibirá un ejemplar gratuito de la revista al ser publicado.
+* **Datos personales**: información de identificación del autor (nombre, apellidos, contacto, perfil militar si aplica).
+* **Documentos**: ficheros obligatorios (DNI, CV) y opcionales (certificados, publicaciones previas).
+* **Tablero de autores**: vista personalizada donde el autor puede consultar el estado de sus artículos y observaciones recibidas.
+* **Dirección**: domicilio del autor, con posibilidad de marcar dirección principal y de envío postal.
+* **Ejemplar de cortesía**: copia gratuita de la revista enviada al autor tras la publicación de un artículo.
 
 ---
 
-## 2. Artículos
+## Artículos
 
-**Temática**
-
-* Clasificación de los artículos según materia o área de conocimiento.
-* Sirve para organizar la revista por secciones temáticas.
-
-**Tipo**
-
-* Determinar la categoría del artículo: articulo, documento, etc.
-
-**Certificado de Pago**
-
-* Certificado de pago de los artículos publicados en la revista, en función de la calidad del mismo.
-
-**Extensión**
-
-* Definir el tamaño del artículo (número de páginas o caracteres).
-* Garantizar coherencia en la maquetación de la revista.
-
-**Documentos**
-
-* Archivos asociados al artículo: versión enviada, revisiones, imágenes, gráficos.
-
-**Estado**
-
-* Ciclo de vida del artículo: recibido, en revisión, aprobado, rechazado, publicado.
+* **Formato de documento**: tipo de fichero aceptado (manuscrito, PDF, Word, etc.).
+* **Manuscrito**: versión enviada del artículo por parte del autor.
+* **Versiones**: histórico de manuscritos (v1, v2, v3…), con control de cambios.
+* **Ciclo editorial**: fases por las que pasa el artículo (borrador, enviado, en revisión, aceptado, publicado, etc.).
+* **Estados**: estados definidos que reflejan el avance del artículo (borrador, en revisión, aceptado, rechazado, publicado).
+* **Observaciones editoriales**: comentarios del redactor/editor al autor durante el proceso de revisión.
+* **Comentarios**: anotaciones específicas de revisores o editores.
+* **Correcciones**: modificaciones sugeridas que debe aplicar el autor en nuevas versiones.
+* **Anexos**: ficheros complementarios (imágenes, gráficos, tablas).
+* **Histórico**: registro de todas las acciones sobre un artículo (envíos, evaluaciones, decisiones).
+* **Remuneración**: pago recibido por los autores según política de la revista.
+* **Certificados**: documento que acredita el pago o la publicación de un artículo.
 
 ---
 
-## 3. Número de Revista
+## Número de Revista
 
-**Propuesta de artículos**
-
-* Relación de artículos aceptados y en reserva.
-* Base para configurar el contenido de cada edición.
-
-**Secciones**
-
-* Divisiones internas de la revista (secciones fijas).
-
-**Extensión**
-
-* Definición del tamaño total del número: número de páginas y de caracteres.
-
-**Planificación**
-
-* Organización temporal de cuándo se publicará cada número.
+* **Secciones**: divisiones internas del número (ej. editorial, artículos de investigación, reseñas).
+* **Actualización**: modificación de contenidos del número antes de su cierre.
+* **Fijas**: secciones permanentes que aparecen en cada edición.
+* **Propuesta de artículos**: listado preliminar de artículos candidatos a publicarse en el número.
+* **Aceptados**: artículos aprobados para publicarse.
+* **Reserva**: artículos aprobados como suplentes en caso de sustitución.
+* **Planificación**: calendario previsto de publicación (mes/año).
+* **Extensión**: longitud total de la revista o de cada artículo (páginas, caracteres).
+* **Número de páginas**: límite máximo de la edición.
+* **Número de caracteres**: referencia para ajustar artículos al espacio disponible.
+* **Maquetación**: preparación del número para impresión, incluyendo textos, imágenes y diagramación.
 
 ---
 
-## 4. Evaluaciones
+## Evaluaciones
 
-**Consejero**
-
-* Militar asignado para la evaluación anónima de artículos.
-* Personal militar con una especialidad concreta.
-
-**Especialidad**
-
-* Campo de experiencia del consejero, usado para asignar artículos a evaluar.
-
-**Nº de evaluaciones**
-
-* Control del número de revisiones asignadas a cada consejero.
-* Nº Minimo de evaluacione spor artículo.
-
-**Informe**
-
-* Documento generado tras la evaluación con nota y recomendaciones.
+* **Consejero**: persona experta que revisa y evalúa artículos.
+* **Especialidad**: área de conocimiento en la que el consejero puede evaluar.
+* **Asignación**: relación formal entre un artículo y uno o más consejeros.
+* **Manuscrito anónimo**: versión del artículo en la que se oculta la identidad del autor para evaluación imparcial.
+* **Nº de Evaluaciones**: cantidad mínima o máxima de revisiones que debe tener cada artículo.
+* **Parámetros de evaluación**: reglas como número de revisores, tiempos de respuesta, formato de informe.
+* **Informe**: resultado de la evaluación, con criterios, observaciones y recomendación.
 
 ---
 
-## 5. Suscripciones
+## Suscripciones
 
-**Suscriptor**
+* **Estado**: situación de la suscripción (activa, suspendida, vencida, cancelada).
+* **Destinatario**: persona u organización que recibe la revista (nacional o internacional, civil o militar).
+* **Nº de ejemplares**: cantidad de revistas enviadas en cada periodo de publicación.
+* **Suscriptor**: entidad contratante (civil, militar, institucional, particular o empresa).
+* **Datos de facturación**: información fiscal y bancaria para gestionar pagos.
+* **Forma de pago**: métodos admitidos (domiciliación, tarjeta, transferencia, otros).
+* **Pagador**: persona o institución que realiza el pago, que puede ser distinta al suscriptor.
 
-* Identificación del tipo: civil, militar, particular, empresa o institucional.
-* Permite segmentar las suscripciones.
+---
 
-**Datos de facturación**
+## Distribución
 
-* Información del pagador (nombre, contacto, CIF/NIF, método de pago).
+* **Etiquetas de envío**: documentos generados automáticamente con dirección y datos del destinatario.
+* **Nacional**: envío dentro del país.
+* **Internacional**: envío fuera del país.
+* **Civil**: envío a suscriptores particulares.
+* **Militar**: envío a unidades militares o instituciones relacionadas.
+* **Institucional**: envío a organizaciones oficiales (ministerios, universidades, etc.).
+* **Empresas**: envío a entidades privadas.
+* **Particular**: envío a una persona física.
 
-**Estado**
 
-* Situación de la suscripción: activa, caducada, pendiente de pago.
 
-**Etiquetas**
-
-* Datos impresos para distribución postal.
-* Gestión de envíos físicos.
-
-**Destinatario**
-
-* Dirección de envío postal: particular o unidad de destino.
 
