Update 2.2. Impact Map

--- a/2.2.-Impact-Map.md
+++ b/2.2.-Impact-Map.md
@@ -1,9 +1,6 @@
 ## ImpactMap
 
-![](Imágenes/ImpactMapV3.svg)
-
-
-# 📌 Impact Map V3 – Desarrollado
+![](Imágenes/ImpactMapV3.jpg)
 
 ## 1. Objetivo Principal
 
